# gst-zip

./: .gitignore  AUTHORS  README.md  autogen.sh  configure.ac
src/: Makefile.am  gstzip.c  gstzipbasedec.c  gstzipbasedec.h  gstzipbz2dec.c  gstzipbz2dec.h  gstzipgzdec.c  gstzipgzdec.h
tests/: test.sh  test_gstreamer.sh  test_gstreamer1.sh  vars-clean.sh  vars-memory-leaks.sh
tools/: bzlib2.pc
